# axvm

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/workflows/: check.yml  ci.yml  deploy.yml  release.yml  test.yml
.qoder/repowiki/en/content/: Getting Started.md  Hardware Abstraction Layer.md  Inter-VM Communication.md  Introduction.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Configuration API Reference.md  Hardware Abstraction Layer API Reference.md  VM API Reference.md  vCPU API Reference.md
.qoder/repowiki/en/content/Architecture Overview/: Architecture Overview.md  Hardware Abstraction Layer.md  VM Core Architecture.md  vCPU Architecture and Implementation.md
.qoder/repowiki/en/content/Device Management/: Device Management.md  Emulated Devices.md  I_O Handling.md  Passthrough Devices.md  System Register Access.md
.qoder/repowiki/en/content/Examples and Use Cases/: Advanced VM Patterns.md  Basic VM Setup.md  Custom Device Emulation.md  Examples and Use Cases.md
.qoder/repowiki/en/content/Memory Management/: Address Translation.md  Guest Memory Access Control.md  Memory Management.md  Memory Mapping.md  Page Fault Handling.md
.qoder/repowiki/en/content/Troubleshooting/: Device I_O and Passthrough Issues.md  Memory Mapping and Translation Failures.md  Troubleshooting.md  VM Lifecycle Issues.md  vCPU Execution Problems.md
.qoder/repowiki/en/content/VM Management/: VM Configuration System.md  VM Lifecycle Management.md  VM Management.md  VM State Tracking and Concurrency.md
.qoder/repowiki/en/content/vCPU Management/: Architecture-Specific vCPU Implementations.md  Exit Handling and Reason Processing.md  vCPU Execution Model.md  vCPU Lifecycle Management.md  vCPU Management.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/zh/content/: 快速入门.md  扩展点与集成指南.md  架构设计与模块关系.md  配置管理.md  项目概述.md
.qoder/repowiki/zh/content/API 参考文档/: API 参考文档.md  VM 核心 API.md  硬件抽象层 API.md  配置模型 API.md
.qoder/repowiki/zh/content/核心概念详解/: VM Exit机制与处理流程.md  vCPU管理与执行模型.md  内存映射模式详解.md  核心概念详解.md  虚拟机生命周期管理.md  设备I_O处理机制.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
axvm/: all.html  fn.has_hardware_support.html  index.html  sidebar-items.js  struct.AxVM.html  trait.AxVMHal.html  type.AxVCpuRef.html  type.AxVMPerCpu.html  type.AxVMRef.html
axvm/config/: enum.VMInterruptMode.html  enum.VMType.html  enum.VmMemMappingType.html  index.html  sidebar-items.js  struct.AxVCpuConfig.html  struct.AxVMConfig.html  struct.AxVMCrateConfig.html  struct.EmulatedDeviceConfig.html  struct.PassThroughDeviceConfig.html  struct.VMImageConfig.html  struct.VmMemConfig.html
axvm/hal/: trait.AxVMHal.html
axvm/vm/: struct.AxVM.html  type.AxVCpuRef.html  type.AxVMRef.html
docs/: virtual-device-management-design.md
search.desc/axvm/: axvm-desc-0-.js
src/: config.rs  hal.rs  lib.rs  region.rs  vcpu.rs  vhal.rs  vm.rs
src/arch/: mod.rs
src/arch/aarch64/: cpu.rs  hal.rs  mod.rs  plat.rs  vm.rs
src/arch/aarch64/vm/: init.rs  inited.rs  mod.rs  running.rs  unint.rs
src/arch/riscv64/: cpu.rs  hal.rs
src/arch/riscv64/vm/: running.rs  unint.rs
src/arch/x86_64/: cpu.rs  hal.rs  mod.rs
src/arch/x86_64/vm/: inited.rs  mod.rs  running.rs  stopping.rs  unint.rs
src/axvm/: config.rs.html  hal.rs.html  lib.rs.html  vcpu.rs.html  vm.rs.html
src/fdt/: gen.rs  mod.rs
src/hal/: cpu.rs  mod.rs  percpu.rs  timer.rs
src/tests/: config_tests.rs  mod.rs  vm_status_tests.rs
src/vcpu/: mod.rs
src/vhal/: cpu.rs  mod.rs  precpu.rs  timer.rs
src/vm/: addrspace.rs  data.rs  data2.rs  define.rs  machine.rs  mod.rs  vdev.rs
src/vm/addrspace/: mmio.rs  mod.rs
src/vm/machine/: init.rs  mod.rs  running.rs
src/vm/vcpu/: ls.rs  mod.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/alloc/sync/: struct.Arc.js
type.impl/axvcpu/percpu/: struct.AxPerCpu.js
