[package]
name = "axvm"
version = "0.1.0"
edition = "2024"

[features]
default = ["vmx"]
vmx = []
4-level-ept = []   # TODO: Realize 4-level-ept on x86_64 and riscv64.

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.10"

# System independent crates provided by ArceOS.
axerrno = "0.2"
cpumask = "0.1.0"
# kspin = "0.1.0"
memory_addr = "0.4"
page_table_entry = { version = "0.5", features = ["arm-el2"] }
page_table_multiarch = "0.5"
percpu = { version = "0.2.0", features = ["arm-el2"] }

# System dependent modules provided by ArceOS-Hypervisor.
axvcpu = "0.1"
axaddrspace = "0.2"
axvisor_api = "0.2"
axdevice = { git = "https://github.com/arceos-hypervisor/axdevice.git", branch = "aar-master" } #!!!
axdevice_base = "0.1"
axvmconfig = { version = "0.1", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_vcpu = "0.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv_vcpu = "0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vcpu = "0.1"
arm_vgic = { version = "0.1", features = ["vgicv3"] }

[patch.crates-io]
axvmconfig = { git = "https://github.com/arceos-hypervisor/axvmconfig.git", branch = "aar-master" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu", branch = "aar-master" }
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api", branch = "aar-master" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace", branch = "aar-master" }
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates", branch = "aar-master"}
x86_vlapic = { git = "https://github.com/arceos-hypervisor/x86_vlapic", branch = "aar-master"}
arm_vgic = { git = "https://github.com/arceos-hypervisor/arm_vgic", branch = "aar-master"}
x86_vcpu = { git = "https://github.com/arceos-hypervisor/x86_vcpu", branch = "aar-master"}
arm_vcpu = { git = "https://github.com/arceos-hypervisor/arm_vcpu", branch = "aar-master"}
riscv_vcpu = { git = "https://github.com/arceos-hypervisor/riscv_vcpu", branch = "aar-master"}
