[package]
edition = "2024"
name = "axvm"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.2.0"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual Machine resource management crate for ArceOS's hypervisor variant."
repository = "https://github.com/arceos-hypervisor/axvm"
keywords = ["vm", "hypervisor", "arceos"]
license = "Apache-2.0"

[features]
default = ["vmx"]
vmx = []
# Note: 4-level-ept support is now provided through dynamic page table selection in axaddrspace
# The feature gate is no longer needed

[dependencies]
anyhow = {version = "1.0", default-features = false}
cfg-if = "1.0"
lazyinit = "0.2"
log = "0.4"
ranges-ext.workspace = true
spin = "0.10"
thiserror = {version = "2", default-features = false}
timer_list = "0.1"

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
bitmap-allocator = "0.2.1"
cpumask = "0.1.0"
kspin = "0.1"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
percpu = {version = "0.2", features = ["arm-el2"]}
vm-allocator.workspace = true
derive_more = { version = "2", default-features = false, features = ["full"] }

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace = "0.2"

axhal.workspace = true
axruntime.workspace = true
axstd.workspace = true
axvm-types.workspace = true
axvmconfig = {version = "0.1", default-features = false}
fdt-edit = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"
x86_vcpu = "0.1"
axplat-x86-qemu-q35.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
# riscv_vcpu = "0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11.0"
aarch64-cpu-ext = "0.1"
arm_vcpu = "0.1"
# arm_vgic = {version = "0.1", features = ["vgicv3"]}

[patch.crates-io]
arm_vcpu = {git = "https://github.com/arceos-hypervisor/arm_vcpu", branch = "next"}
axvcpu = {git = "https://github.com/arceos-hypervisor/axvcpu.git", branch = "next"}
axvmconfig = {git = "https://github.com/arceos-hypervisor/axvmconfig.git", branch = "next"}
